<resources>
    <string name="app_name">地形图详查手簿</string>
    <string name="action_location_title">位置</string>
    <string name="action_clear_title">清空</string>
    <string name="action_meatture_title">量测</string>
    <string name="action_ct_title">草图</string>
    <string name="action_feature_title">检查人员</string>
    <string name="action_layers_title">切换样本</string>
    <string name="soft_update_xml_url">http://.xml</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后</string>
    <string name="soft_updating">发现新版本</string>
    <string name="soft_update_info">是否更新</string>
    <string name="soft_update_apk_url">http://.apk</string>
    <string name="btndir">设置工程目录</string>
    <string name="menu_settings">设置</string>
    <!-- CustomerDialog -->
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="rember_psw">记住密码</string>
    <string name="app_copyright">eMap</string>
    <string name="sclass">质量类别</string>
    <string name="pclass">质量类型</string>
    <string name="wtdm">问题代码</string>
    <string name="wtms">问题描述</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="cz">操作</string>
    <string name="del">删除</string>
    <string name="rowid">序号</string>
    <string name="length">边长（米）</string>
    <string name="uid">UID</string>
</resources>
