<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <com.esri.android.map.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center">

            <ImageView
                android:id="@+id/cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cross"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/leftpanel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/leftup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/infotab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:gravity="top|left"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:id="@+id/xmnum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="top|center"
                            android:text="项目号："
                            android:textColor="@color/blue"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/jcry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="top|center"
                            android:text="检查人："
                            android:textColor="@color/blue"
                            android:textSize="15sp"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/pcnum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="top|center"
                            android:text="当前批次："
                            android:textColor="@color/blue"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/ybnum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="top|center"
                            android:text="当前样本："
                            android:textColor="@color/blue"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/leftdown"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:id="@+id/switchtable"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/btnxcinfo"
                            android:visibility="gone"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/xcinfolist"
                        android:layout_width="310dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:gravity="bottom|left"
                        android:orientation="vertical"
                        android:visibility="gone">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="30dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/rowid"
                                android:textColor="@color/red"
                                android:textSize="15sp" />
                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/wtdm"
                                android:textColor="@color/red"
                                android:textSize="15sp" />

                            <TextView
                                android:layout_width="160dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/wtms"
                                android:textColor="@color/red"
                                android:textSize="15sp" />
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/uid"
                                android:textColor="@color/red"
                                android:textSize="15sp"
                                android:visibility="gone"/>

                            <TextView
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/cz"
                                android:textColor="@color/red"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <ListView
                            android:id="@+id/xcinfolistview"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:choiceMode="singleChoice"
                            android:divider="#d4d4d4"
                            android:dividerHeight="1dp" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/bcinfolist"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:gravity="bottom|left"
                        android:orientation="vertical"
                        android:visibility="gone">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="30dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/rowid"
                                android:textColor="@color/red"
                                android:textSize="15sp" />

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/length"
                                android:textColor="@color/red"
                                android:textSize="15sp" />

                            <TextView
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/cz"
                                android:textColor="@color/red"
                                android:textSize="15sp" />
                        </LinearLayout>
                        <ListView
                            android:id="@+id/bcinfolistview"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:choiceMode="singleChoice"
                            android:divider="#d4d4d4"
                            android:dividerHeight="1dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rightpanel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/drawtools"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">
                    <ImageView
                        android:id="@+id/i_draw_point"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/i_draw_point"
                        android:visibility="gone"/>
                    <ImageView
                        android:id="@+id/i_draw_freeline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/i_draw_freeline"/>
                    <ImageView
                        android:id="@+id/i_draw_freepoly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/i_draw_freepoly"
                        android:visibility="gone"/>
                    <ImageView
                        android:id="@+id/i_draw_line"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/i_draw_line"
                        android:visibility="gone"/>
                    <ImageView
                        android:id="@+id/i_draw_poly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/i_draw_poly"
                        android:visibility="gone"/>
                    <ImageView
                        android:id="@+id/i_draw_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/i_draw_text"
                        android:visibility="gone"/>
                    <ImageView
                        android:id="@+id/i_pan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/i_pan"/>
                    <ImageView
                        android:id="@+id/i_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/i_cancel"/>
                    <ImageView
                        android:id="@+id/i_ok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/i_ok"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|right"
                    android:layout_marginVertical="20dp"
                    android:background="@color/caldroid_transparent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/btncollect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_addbj"/>

                    <ImageView
                        android:id="@+id/btndistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/btn_line"/>

                    <ImageView
                        android:id="@+id/btnlocate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/btn_locate"
                        android:visibility="gone"/>

                    <ImageView
                        android:id="@+id/btntable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/btn_table"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.esri.android.map.MapView>
</android.support.constraint.ConstraintLayout>